Proyecto real aumentado HTML CSS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         </title>
     </head>
     <body>
-        <h1>Aqui va mi primer Sitio</h1>
-        <p>Y este sera el parrafo de inicio</p>
-        <p class="segundo-parrafo">segundo parrafo</p>
+        <header>
+            <img src="logoPrinc.png" alt="logo" title="logo" height="100"/>
+        </header>
+        <h1>PAGINA EN PROCESO</h1>
+        <p>Estamos trabajando</p>
+        <p class="segundo-parrafo">por una pagina mejor</p>
     </body>
 </html>
